[package]
name = "gpui-testing"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }

[[bin]]
name = "gpui_testing"
path = "./src/main.rs"
